--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
+video {
+  aspect-ratio: 16 / 9 !important;
+  width: 100% !important;
+  height: auto !important;
+}
+
 body {
   overflow: hidden;
 }
