--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   overflow: hidden;
 }
 
+::-webkit-media-controls {
+  display:none !important;
+}
+
 * {
   font-family: 'Poppins', 'sans-serif';
   @apply dark:border-dark2 dark:divide-dark2
